preparation for deployment