@@ -1,5 +1,6 @@
 package JoaquimManjama.ChangelogGenerator.Security;
 
+import JoaquimManjama.ChangelogGenerator.Config.ClientConfig;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -14,14 +15,17 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfigurations {
     private final JwtAuthFilter jwtAuthFilter;
+    private final ClientConfig clientConfig;
 
-    public SecurityConfigurations(JwtAuthFilter jwtAuthFilter) {
+    public SecurityConfigurations(JwtAuthFilter jwtAuthFilter, ClientConfig clientConfig) {
         this.jwtAuthFilter = jwtAuthFilter;
+        this.clientConfig = clientConfig;
     }
 
     @Bean
@@ -49,7 +53,7 @@ public class SecurityConfigurations {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        configuration.setAllowedOrigins(List.of(clientConfig.getClientUrl()));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
